app-foo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foo
  labels:
    app: foo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: foo
  template:
    metadata:
      labels:
        app: foo
    spec:
      containers:
        - name: app
          image: docker.io/ealen/echo-server:0.7.0
          ports:
            - containerPort: 80
              name: http
          resources: { limits: { cpu: 2m, memory: 32Mi } }
---
kind: Service
apiVersion: v1
metadata:
  name: foo
spec:
  selector:
    app: foo
  ports:
    - port: 80
      targetPort: http
      name: http
