app-root.yaml
apiVersion: v1
kind: Pod
metadata:
  name: root
  labels:
    app: root
spec:
  containers:
    - name: app
      image: gcr.io/google-samples/hello-app:2.0
      ports:
        - containerPort: 8080
          name: http
      resources: { limits: { cpu: 2m, memory: 8Mi } }
---
kind: Service
apiVersion: v1
metadata:
  name: root
spec:
  selector:
    app: root
  ports:
    - port: 80
      targetPort: http
      name: http
